# hanoi_real_estate_prediction

./: .gitignore  LICENSE  README.md  eda.ipynb  knn.ipynb  linear.ipynb  main.py  mlp.ipynb  mlp_best.csv  numerical_features.eps  preprocess_data.ipynb  proxies.txt  pyproject.toml  qnn-regression(1).ipynb  random_forest.ipynb  svr.ipynb
Gradient_Boosting/: ensemble.md  lightgbm.ipynb  submission.csv  xgboost.ipynb
checkpoint/: best_mlp_checkpoint.pth  hqnn_checkpoint.pth
data/: clean_data.csv  linear_model.csv  mlp_model_pytorch.csv  mlp_model_pytorch_best.csv  output.json  rand_submission.csv  sample_submission.csv  solution.csv  svr_model.csv  test.csv  train.csv  val.csv
data_10_05_2025/: clean_data.csv  linear_model.csv  test.csv
data_price/data_price/: items.py  middlewares.py  pipelines.py  settings.py
data_price/data_price/spiders/: alonhadat.py
results/: bart_depth_model.csv  bart_model.csv  knn_model_distance.csv  knn_model_l1.csv  knn_model_l2.csv  knn_model_uniform.csv  lasso_model.csv  lasso_poly_model.csv  linear_model.csv  poly_model.csv  rf_model.csv  ridge_model.csv  ridge_poly_model.csv  tree_limit_model.csv  tree_model.csv  tree_pruned_model.csv
src/: demo.ipynb  eda.ipynb  hqnn.ipynb  linear.ipynb  mlp.ipynb  random_forest.ipynb  svr.ipynb
