[project]
name = "hanoi-real-estate-prediction"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bartz>=0.5.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pymc-bart>=0.9.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "yellowbrick>=1.5",
]
